# a_sudoku_p

./: README.md  input.txt  main.py  pyproject.toml  rules.dlv  utility.py
